k8s/ecuacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecuacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecuacion
  template:
    metadata:
      labels:
        app: ecuacion
    spec:
      containers:
      - name: ecuacion
        image: gigo2404/ecuacion:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: ecuacion
spec:
  selector:
    app: ecuacion
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
