k8s/suma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
      - name: suma
        image: gigo2404/suma:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: suma
spec:
  selector:
    app: suma
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
